--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
 	<div class="col-md-9 rightBorder">
 		{% include section_intro.html %}
 		{% include section_skills.html %}
+		{% include section_progskills.html %}
 		{% include section_fabskills.html %}
 		{% include section_workexperience.html %}
 		{% include section_education.html %}
